--- a/notebooks/nfl-big-dta-bowl-2025.ipynb
+++ b/notebooks/nfl-big-dta-bowl-2025.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "class NFLDataLoader:\n",
     "    path = \"assets/nfl-big-data-bowl-2025/\"\n",
-    "    save_offense_path = \"assets/offesnse-data/\" \n",
+    "    save_offense_path = \"assets/offense-data/\" \n",
     "    save_defense_path = \"assets/defense-data/\"\n",
     "    \n",
     "    def __init__(self):\n",
